# Poseidon

./: .gitignore  .gitmodules  Dockerfile.dev  Jenkinsfile  LICENSE  README.md  Ubuntu_Core_ROS_Setup_Part1.sh  Ubuntu_Core_ROS_Setup_Part2.sh  agent.md  agents.md  bin_mosaic-x5.sh  bin_piksi.sh  cartographer.md  clean_if_memory_high.sh  config.txt  gmapping.md  launch.sh  launchDummy.sh  launchEchoBoat_852.sh  launchHydrobox-852-piksi.sh  launchHydrobox-852-x5.sh  launchHydrobox-852.sh  launchHydrobox-nmea-piksi.sh  launchHydrobox-nmea-x5.sh  launchHydrobox-nmea.sh  launchHydrobox.sh  launchLowrance.sh  launchROSService.sh  launchWithRoslaunch.sh  log.txt  manifest.md  play.rosbag.sh  rec_rosbag.sh  ros2_migration.md  test_clean_env.sh  version.md  version2.md  virtual_serial_gnss.sh
Scripts/: Ubuntu server 64bit ROS  Ubuntu server 64bit ROS.sh  Ubuntu_Core_ROS_Setup.sh  Ubuntu_Core_ROS_Setup_Part1.sh  Ubuntu_Core_ROS_Setup_Part2.sh  git.sh  make.sh  wifi-ap.sh
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/ros2_ws/src/binary_stream_msg/: CMakeLists.txt  package.xml
src/ros2_ws/src/gnss_status_msg/: CMakeLists.txt  package.xml
src/ros2_ws/src/gnss_status_msg/msg/: GnssDiagnostic.msg
src/ros2_ws/src/gnss_zed_f9p/: package.xml  setup.py
src/ros2_ws/src/gnss_zed_f9p/gnss_zed_f9p/: gnss_zed_f9p_node.py
src/ros2_ws/src/gnss_zed_f9p/resource/: gnss_zed_f9p
src/ros2_ws/src/hydroball_ws/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/hydroball_ws/hydroball_ws/: base_ws_node.py  config_ws.py  data_ws.py  diagnostics_ws.py  files_ws.py
src/ros2_ws/src/hydroball_ws/resource/: hydroball_ws
src/ros2_ws/src/i2c_controller_service/: CMakeLists.txt  package.xml
src/ros2_ws/src/imu_bno055/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/imu_bno055/imu_bno055/: bno055_node.py
src/ros2_ws/src/imu_null/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/imu_null/imu_null/: imu_null_node.py
src/ros2_ws/src/logger/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/logger/logger/: __init__.py  logger_base.py  logger_binary.py  logger_binary_node.py  logger_node.py  logger_text.py  logger_text_node.py
src/ros2_ws/src/logger_interfaces/: CMakeLists.txt  package.xml
src/ros2_ws/src/logger_interfaces/srv/: GetLoggingMode.srv  SetLoggingMode.srv  ToggleLogging.srv
src/ros2_ws/src/power_control/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/power_control/power_control/: power_control_node.py
src/ros2_ws/src/power_management/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/power_management/power_management/: power_management_node.py
src/ros2_ws/src/raspberrypi_vitals/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/raspberrypi_vitals/raspberrypi_vitals/: raspberrypi_vitals_node.py
src/ros2_ws/src/raspberrypi_vitals/resource/: raspberrypi_vitals
src/ros2_ws/src/raspberrypi_vitals_msg/: CMakeLists.txt  package.xml
src/ros2_ws/src/raspberrypi_vitals_msg/msg/: sysinfo.msg
src/ros2_ws/src/setting_msg/: CMakeLists.txt  package.xml
src/ros2_ws/src/sonar_dummy/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/sonar_dummy/sonar_dummy/: sonar_dummy_node.py
src/ros2_ws/src/sonar_imagenex852_c/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/sonar_imagenex852_c/sonar_imagenex852_c/: sonar_imagenex852_node.py
src/ros2_ws/src/sonar_nmea_0183_tcp_client/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/sonar_nmea_0183_tcp_client/sonar_nmea_0183_tcp_client/: network_node.py
src/ros2_ws/src/state_controller/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/state_controller/resource/: state_controller
src/ros2_ws/src/state_controller/state_controller/: state_controller_node.py
src/ros2_ws/src/state_controller_msg/: CMakeLists.txt  package.xml
src/ros2_ws/src/state_controller_msg/msg/: State.msg
src/ros2_ws/src/wifi_file_transfer_config/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/wifi_file_transfer_config/wifi_file_transfer_config/: utils.py  wifi_config_node.py
src/workspace/src/bilge_pump/: CMakeLists.txt  package.xml
src/workspace/src/bilge_pump/src/: bilge_pump.py
src/workspace/src/binary_decoder/: CMakeLists.txt  package.xml
src/workspace/src/binary_decoder/src/: main.cpp
src/workspace/src/diagnostics/: CMakeLists.txt  package.xml
src/workspace/src/diagnostics/include/diagnostics/: ApiConnectionDiagnostic.h  BinaryStreamGnssDiagnostic.h  ClockDiagnostic.h  DiagnosticsTest.h  GnssCommunicationDiagnostic.h  GnssDiagnostic.h  GnssFixDiagnostic.h  ImuCalibrationDiagnostic.h  ImuCommunicationDiagnostic.h  ImuDiagnostic.h  SerialNumberDiagnostic.h  SonarCommunicationDiagnostic.h  SonarDiagnostic.h  diagnostics_websocket.h
src/workspace/src/diagnostics/nodes/: diagnostics_websocket_node.cpp
src/workspace/src/diagnostics/scripts/: api_connection_diagnostic.py  binary_stream_gnss_diagnostic.py  clock_diagnostic.py  diagnostics_test_base.py  diagnostics_websocket.py  diagnostics_websocket_node.py  dns_resolution_diagnostic.py  gnss_communication_diagnostic.py  gnss_fix_diagnostic.py  imu_calibration_diagnostic.py  imu_communication_diagnostic.py  internet_connectivity_diagnostic.py  serial_number_diagnostic.py  sonar_communication_diagnostic.py
src/workspace/src/diagnostics/tests/: diagnostics_websocket.test  test_diagnostics_unit.py  test_diagnostics_websocket.py  test_launchrosservice_websocket.py
src/workspace/src/gnss_mosaic_x5/: CMakeLists.txt  package.xml
src/workspace/src/gnss_mosaic_x5/include/gnss_mosaic_x5/: gnss_mosaic_x5.h
src/workspace/src/gnss_mosaic_x5/nodes/: gnss_mosaic_x5_node.cpp
src/workspace/src/gnss_mosaic_x5/src/: gnss_mosaic_x5.cpp
src/workspace/src/gnss_mosaic_x5/tests/: datagrams  gnss_mosaic_x5_test.launch  mosaicX5DatagramCounter.h  test_gnss_mosaic_x5_node.cpp
tools/Edit-Rosbag/: CMakeLists.txt  List-Topics.py  Topic-Reader.py  count_bag_messages.py  crop.py  list_lidar_problematic_message_id.cpp  list_topics.py  make_google_cartographer_work.py  remove_first_x_second_of_bag_.py  sort_bag_by_timestamp.py  topic_deleter.py  topic_extracter.py  topic_reader.py
(+1740 files in other folders)
