<?xml version="1.0"?>
<package format="3">
  <name>imu_bno055</name>
  <version>0.0.1</version>
  <description>ROS2 port of the BNO055 IMU node (I2C).</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
