<?xml version="1.0"?>
<package format="3">
  <name>imu_null</name>
  <version>0.0.1</version>
  <description>ROS2 null IMU publisher (zeros) ported from ROS1.</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
