<?xml version="1.0"?>
<package format="3">
  <name>logger</name>
  <version>0.0.1</version>
  <description>ROS2 Python logger node skeleton mirroring the Poseidon logger service API.</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>logger_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
