<?xml version="1.0"?>
<package format="3">
  <name>logger_interfaces</name>
  <version>0.0.1</version>
  <description>ROS2 service interfaces for the Poseidon logger.</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
