<?xml version="1.0"?>
<package format="3">
  <name>power_control</name>
  <version>0.0.1</version>
  <description>ROS2 port of GPIO power/LED control node.</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
