<?xml version="1.0"?>
<package format="3">
  <name>raspberrypi_vitals</name>
  <version>0.0.1</version>
  <description>ROS2 Python node publishing Raspberry Pi vitals (port from ROS1).</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>raspberrypi_vitals_msg</exec_depend>
  <exec_depend>i2c_controller_service</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
