<?xml version="1.0"?>
<package format="3">
  <name>sonar_dummy</name>
  <version>0.0.1</version>
  <description>ROS2 dummy sonar publisher (depth oscillation) ported from ROS1.</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>setting_msg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
