<?xml version="1.0"?>
<package format="3">
  <name>sonar_imagenex852_c</name>
  <version>0.0.1</version>
  <description>ROS2 port of the Imagenex 852 sonar node (C variant) with serial command/response.</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>binary_stream_msg</exec_depend>
  <exec_depend>setting_msg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
