<?xml version="1.0"?>
<package format="3">
  <name>sonar_nmea_0183_tcp_client</name>
  <version>0.0.1</version>
  <description>ROS2 port of the NMEA-0183 sonar TCP client (depth/position/speed).</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>setting_msg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
