<?xml version="1.0"?>
<package format="3">
  <name>state_controller</name>
  <version>0.0.1</version>
  <description>ROS2 Python port of the state controller (mirrors ROS1 topics/services).</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>raspberrypi_vitals_msg</exec_depend>
  <exec_depend>state_controller_msg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
