<?xml version="1.0"?>
<package format="3">
  <name>state_controller_msg</name>
  <version>0.0.1</version>
  <description>ROS2 messages/services for state controller (ported from ROS1).</description>
  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>raspberrypi_vitals_msg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
