<?xml version="1.0"?>
<package format="2">
  <name>bilge_pump</name>
  <version>0.0.1</version>
  <description>
    bilge pump 
  </description>
  <maintainer email="software@cidco.ca">CIDCO</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>


  
</package>
