<package format="2">
  <name>bilge_pump</name>
  <version>0.0.1</version>
  <description>
    bilge pump 
  </description>
  <maintainer email="software@cidco.ca">CIDCO</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bilge_pump_msg</build_depend>
  
  <depend>rospy</depend>


  <exec_depend>bilge_pump_msg</exec_depend>
  
</package>
