<?xml version="1.0"?>
<package format="2">
  <name>diagnostics</name>
  <version>0.0.0</version>
  <description>The diagnostics package</description>

  <maintainer email="info@cidco.ca">CIDCO</maintainer>
  <license>MIT</license>
  <url type="website">http://cidco.ca</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  <test_depend>rostest</test_depend>
  <test_depend>python3-websockets</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export/>

</package>
